feat(products): add dialog-subscribe component

--- a/apps/products/src/app/app.component.html
+++ b/apps/products/src/app/app.component.html
@@ -3,4 +3,7 @@
   <router-outlet></router-outlet>
 </div>
 
+@if (open) {
+<nx-example-dialog-subscribe> </nx-example-dialog-subscribe>
+}
 <nx-example-footer> </nx-example-footer>
